--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer>Made by Janu</footer>
+  <footer style="color: white">Made by Janu</footer>
 </html>
