Landing Page complete

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"
     />
-    <title>FLIX WORLD</title>
+    <title>MY FLIX</title>
   </head>
   <body style="background-color: #1d1e22">
     <noscript>You need to enable JavaScript to run this app.</noscript>
