--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"
     />
     <title>MY FLIX</title>
+    <link rel=“stylesheet”
+    href=“https://fonts.googleapis.com/icon?family=Material+Icons“>
   </head>
   <body style="background-color: #1d1e22">
     <noscript>You need to enable JavaScript to run this app.</noscript>
