--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
@@ -44,5 +45,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer style="color: white">Made by Janu</footer>
+  <br />
+  <div class="footer">
+    <footer style="color: white">
+      Made by Janu 🖤 Copyright © 2019 Janu USA, Inc
+    </footer>
+  </div>
 </html>
