--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <link rel="stylesheet" type="text/css" href="src/index.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -9,6 +11,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#ffffff" />
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -32,6 +35,7 @@
     href=“https://fonts.googleapis.com/icon?family=Material+Icons“>
   </head>
   <body style="background-color: #1d1e22">
+    <!-- <div class="main-container"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -44,11 +48,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <footer style="color: white">
+      <p></p>
+      <span>Made by Janu 🖤 Copyright © 2019 Janu USA, Inc</span>
+    </footer> -->
+    <!-- </div> -->
   </body>
   <br />
-  <div class="footer">
-    <footer style="color: white">
-      Made by Janu 🖤 Copyright © 2019 Janu USA, Inc
-    </footer>
-  </div>
 </html>
